@@ -2,10 +2,12 @@
 
 open Printf
 
-let logs = prerr_endline
+let errors = ref false
+
+let logs s = errors := true; prerr_endline s
 let log format = ksprintf logs format
 (* let report format = ksprintf (fun str -> logs ("Project : warning _____: " ^ str)) format *)
-let report = log
+(* let report = log *)
 
 (* VS error format: 
   path(lineno) : warning _____: string
