@@ -1,5 +1,6 @@
 
 let ($) f g = function x -> f (g x)
+let (&) f x = f x
 let (>>) x f = f x
 
 external id : 'a -> 'a = "%identity"
